using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GameInputManager : MonoBehaviour {
    private GameInputAction _gameInputAction;

    public Vector2 Movement => _gameInputAction.GameInput.Movement.ReadValue<Vector2>();
    public Vector2 CameraLook => _gameInputAction.GameInput.CameraLook.ReadValue<Vector2>();

    private void Awake() {
        _gameInputAction ??= new GameInputAction();
    }

    private void OnEnable() {
        _gameInputAction.Enable();
    }

    private void OnDisable() {
        _gameInputAction.Disable();
    }
}